# gleanmark

./: .gitignore  CHANGELOG.md  Cargo.toml  PRIVACY.md  README.md
.github/workflows/: release.yml
crates/gleanmark-cli/: Cargo.toml
crates/gleanmark-cli/src/: main.rs
crates/gleanmark-core/: Cargo.toml
crates/gleanmark-core/examples/: bench_embed.rs
crates/gleanmark-core/src/: backend.rs  embedding.rs  error.rs  lib.rs  models.rs  qdrant_manager.rs  search.rs  session.rs  storage.rs  waitlist.rs
crates/gleanmark-mcp/: Cargo.toml
crates/gleanmark-mcp/src/: main.rs  server.rs  types.rs
crates/gleanmark-server/: Cargo.toml
crates/gleanmark-server/src/: lib.rs  main.rs
crates/gleanmark-server/static/: app.js  index.html  style.css
crates/gleanmark-tauri/: Cargo.toml  tauri.conf.json
crates/gleanmark-tauri/capabilities/: default.json
crates/gleanmark-tauri/frontend-stub/: splashscreen.html
crates/gleanmark-tauri/icons/: icon.icns
crates/gleanmark-tauri/src/: main.rs  tray.rs
extension/: manifest.json
extension/background/: service-worker.js
extension/options/: options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
