[workspace]
members = ["crates/gleanmark-core", "crates/gleanmark-server", "crates/gleanmark-cli", "crates/gleanmark-tauri", "crates/gleanmark-mcp"]
resolver = "2"

[workspace.dependencies]
gleanmark-core = { path = "crates/gleanmark-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
