[package]
name = "gleanmark-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "CLI for GleanMark bookmark search"

[[bin]]
name = "gleanmark"
path = "src/main.rs"

[dependencies]
gleanmark-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
open = "5"
