[package]
name = "gleanmark-mcp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "MCP server for GleanMark bookmark search"

[[bin]]
name = "gleanmark-mcp"
path = "src/main.rs"

[dependencies]
gleanmark-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "1.2", features = ["server", "transport-io", "macros"] }
